obj model loader!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,17 @@ cmake_minimum_required(FATAL_ERROR VERSION 3.8)
 
 project("w_vr3")
 
-set(W_VR3_INLCUDE_FILES  
+set(W_VR3_INLCUDE_FILES
 "include/w_vr3/w_vr3.h"
 "include/w_vr3/w_vr3_context.h" 
 "include/w_vr3/Window.h" 
 "include/w_vr3/debugger.h"
 "include/w_vr3/Events.h"
 "include/w_vr3/Renderer.h"
- "include/w_vr3/Texture.h")
+"include/w_vr3/Texture.h"
+"include/w_vr3/Camera.h"
+ "include/w_vr3/w_vr3_all.h")
+
 
 set(W_VR3_SOURCE_DIR "src/")
 set(W_VR3_EXTERNAL_DIR "external/")
@@ -26,7 +29,7 @@ ${W_VR3_INLCUDE_FILES}
 "${W_VR3_SOURCE_DIR}OpenGL/Texture/Texture.h"      "${W_VR3_SOURCE_DIR}OpenGL/Texture/Texture.cpp"
 "${W_VR3_SOURCE_DIR}stb_image/stb_image.h"		   "${W_VR3_SOURCE_DIR}stb_image/stb_image.cpp"
 "${W_VR3_SOURCE_DIR}OpenGL/Camera/Camera.h"		   "${W_VR3_SOURCE_DIR}OpenGL/Camera/Camera.cpp"
- "include/w_vr3/Camera.h")
+ "src/OpenGL/3d_model_loader/3d_model_loader.h" "src/OpenGL/3d_model_loader/3d_model_loader.cpp" "include/w_vr3/d3_model_loader.h")
 
 target_include_directories(w_vr3 PUBLIC "include/")
 
